# CoverFI-logic-pages

./: .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
contracts/: .gitignore  Cargo.toml  README.md  deploy-testnet-with-lab.ps1
contracts/dispute_registry/: Cargo.toml
contracts/dispute_registry/src/: lib.rs  test.rs
contracts/dispute_registry/test_snapshots/test/: test_dispute_flow.1.json
contracts/oracle_adapter/: Cargo.toml
contracts/oracle_adapter/src/: lib.rs
contracts/payment_receipt_registry/: Cargo.toml
contracts/payment_receipt_registry/src/: lib.rs  test.rs
contracts/payment_receipt_registry/test_snapshots/test/: test_create_and_get_receipt.1.json  test_double_initialize_panics.1.json  test_mark_disputed_twice_panics.1.json  test_sent_and_received_lists.1.json  test_verify_receipt.1.json
contracts/premium_vault/: Cargo.toml
contracts/premium_vault/src/: lib.rs
contracts/protected_balance_vault/: Cargo.toml
contracts/protected_balance_vault/src/: lib.rs
contracts/protection_engine/: Cargo.toml
contracts/protection_engine/src/: lib.rs  test.rs
contracts/receipt_access_registry/: Cargo.toml
contracts/receipt_access_registry/src/: lib.rs  test.rs
contracts/receipt_anchor_registry/: Cargo.toml
contracts/receipt_anchor_registry/src/: lib.rs  test.rs
contracts/reserve_vault/: Cargo.toml
contracts/reserve_vault/src/: lib.rs
contracts/username_registry/: Cargo.toml
contracts/username_registry/src/: lib.rs  test.rs
public/: 404.html  contracts.json
server/: index.js
(+55 files in other folders)
