[workspace]
resolver = "2"
members = [
  "protection_engine",
  "protected_balance_vault",
  "premium_vault",
  "reserve_vault",
  "oracle_adapter",
]

[workspace.package]
edition = "2021"
license = "MIT"
publish = false
version = "0.1.0"

[workspace.dependencies]
soroban-sdk = "=26.0.0"

[profile.release]
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = "symbols"
