[package]
name = "protection_engine"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk.workspace = true

[dev-dependencies]
oracle_adapter = { path = "../oracle_adapter" }
premium_vault = { path = "../premium_vault" }
protected_balance_vault = { path = "../protected_balance_vault" }
reserve_vault = { path = "../reserve_vault" }
soroban-sdk = { workspace = true, features = ["testutils"] }
